--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>WL-EMG-demo4</title>
+    <title>WL-EMG-demo5</title>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self';">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self';" />
   </head>
 
   <body>
